<resources>
    <string name="app_name">Notes</string>
    <string name="todo">TODO</string>
    <string name="note">Note</string>
    <string name="may_14_2022">May 14,2022</string>
    <string name="add">Add</string>
    <string name="enter_title">Enter Title</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam</string>
    <string name="edit_title">Edit Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="enter_note">Enter Note</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="notes">Notes</string>
</resources>