<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="48dp"
    app:cardBackgroundColor="?attr/colorPrimary"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp"
        tools:ignore="ExtraText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_text_input"
            android:elevation="12dp"
            android:hint="@string/edit_title"
            android:paddingHorizontal="12dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNote1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_text_input"
            android:elevation="12dp"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/edit_note"
                android:maxLines="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:elevation="8dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FC4700"
            android:elevation="8dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>