<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="com.example.notes.ui.NoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="24dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_back_24" />


        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:hint="@string/note"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvNoteBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/lorem"
            android:textSize="18sp" />
    </ScrollView>

    <!--<com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_code"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="40dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="18sp" />-->
</LinearLayout>